--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,17 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "doctrine/common": "^2.6",
+        "doctrine/dbal": "^2.10",
+        "doctrine/inflector": "^1.0.4",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/passport": "^9.2",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0"
+        "laravel/ui": "^2.0",
+        "mercadopago/dx-php": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
